Add mysql e removendo dependencia circular

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.profiles.active=test
+# ===============================
+# = GENERAL SETTINGS
+# ===============================
+
+# Appendix A. Common application properties: https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+
+spring.profiles.active=dev
 
 jwt.secret=SantiagoBrothersAvakToken
 jwt.expiration=60000
