--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,9 +6,9 @@
 
 # Connection url for the database "gcp_database"
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/avak_database?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
 # ===============================
 # = JPA / HIBERNATE
@@ -18,5 +18,6 @@ spring.datasource.password=
 # stripped before adding them to the entity manager).
 
 # Show or not log for each sql query
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
