Configuraçoes para heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 # Appendix A. Common application properties: https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 jwt.secret=SantiagoBrothersAvakToken
 jwt.expiration=60000
