--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>com.santiago.avak</groupId>
+	<artifactId>avak</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	
+	<name>avak</name>
+	<description>AVA para cadeira de EAD</description>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.santiago.avak</groupId>
-	<artifactId>avak</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>avak</name>
-	<description>AVA para cadeira de EAD</description>
 
 	<properties>
 		<java.version>1.8</java.version>
